# clv_prediction

./: .gitignore  .pre-commit-config.yaml  404.html  CLV_prediction.ipynb  LICENSE  MANIFEST.in  README.md  customer_next_transaction_value_1d_cnn_time_series_implementation.ipynb  index.html  mkdocs.yml  pyproject.toml  setup.cfg  setup.py  setup_arm64.py  sitemap.xml
.github/workflows/: ci-pipeline.yml  docs.yml  release.yml
clv/: configs.py  dashboard.py  data_access.py  executor.py  functions.py  main.py  newcomers.py  next_purchase_model.py  next_purchase_prediction.py  purchase_amount_model.py  scheduler_service.py  utils.py
clv/docs/: configs.yaml  test_parameters.yaml
data/: results_month_20201215.csv  test_parameters.yaml
data_access/: index.html
data_preprocess/: index.html
docs/: data_access.md  data_preprocess.md  index.md  intro.md  monitoring.md  params.md  train.md  tune.md
intro/: index.html
monitoring/: index.html
params/: index.html
search/: search_index.json
train/: index.html
tune/: index.html
