[tool.poetry]
name = "clv-prediction"
version = "0.1.9"
description = ""
authors = ["caglanakpinar <cakpinar23@gmail.com>"]
readme = "README.md"
packages = [
    {include = "clv"}
]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
plotly = "^6.0.0"
scipy = "^1.15.2"
pyyaml = "^6.0.2"
schedule = "^1.2.2"
psycopg2-binary = "^2.9.10"
tensorflow = "^2.18.0"
pyarrow = "^19.0.1"
statsmodels = "^0.14.4"
keras-tuner = "^1.4.7"
dash = "^2.18.2"
google = "^3.0.0"
mkdocs-material = "^9.6.7"
mkdocs-material-extensions = "^1.3.1"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.3.5"
pre-commit = "^4.1.0"
mkdocs = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
